# app-park

./: Cargo.toml  README.md  debian.Dockerfile
.github/workflows/: docker.yml
src/: app.rs  error.rs  main.rs  options.rs  storage.rs
src/assets/: index.html  manifest.plist
